ft: Added validations

--- a/UI/pages/admin/index.html
+++ b/UI/pages/admin/index.html
@@ -43,22 +43,13 @@
             </div>
             <ul id="sidebar-menu ">
               <li class="menu-list-item">
-                Posts
-                <ol class="dropdown">
-                  
-                  <li><a class="silent" href="./posts/form">Add post</a></li>
-                  <li><a class="silent" href="posts/">Edit posts</a></li>
-                </ol>
+                  <a class="silent" href="posts/">Posts</a>
               </li>
-              <li class="menu-list-item">Projects
-                <ol class="dropdown">
-                  <li><a class="silent" href="./projects/form">Add project</a></li>
-                  <li><a class="silent" href="./projects/">Edit project</a></li>
-                </ol>
+              <li class="menu-list-item"><a class="silent" href="./projects/">Project</a>
               </li>
               <li class="menu-list-item"> 
                     <a class="silent" href="./personal/">Edit personal info</a>
-                  </li>            
+                </li>            
               <li class="menu-list-item"><a href="enquires/" class="silent">Personal enquiries </a></li>
             </ul>
           </div>
