--- a/UI/pages/admin/enquires/index.html
+++ b/UI/pages/admin/enquires/index.html
@@ -41,22 +41,10 @@
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
-                Posts
-                <ol class="dropdown">
-                  <li><a class="silent" href="../posts/form">Add post</a></li>
-                  <li><a class="silent" href="../posts/">Edit posts</a></li>
-                </ol>
+                <a class="silent" href="../posts/">Posts</a>
               </li>
               <li class="menu-list-item">
-                Projects
-                <ol class="dropdown">
-                  <li>
-                    <a class="silent" href="../projects/form">Add project</a>
-                  </li>
-                  <li>
-                    <a class="silent" href="../projects/">Edit project</a>
-                  </li>
-                </ol>
+                <a class="silent" href="../projects/">Projects</a>
               </li>
               <li class="menu-list-item">
                 <a class="silent" href="../personal/">Edit personal info</a>
