--- a/UI/pages/admin/personal/index.html
+++ b/UI/pages/admin/personal/index.html
@@ -44,22 +44,10 @@
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
-                Posts
-                <ol class="dropdown">
-                  <li><a class="silent" href="../posts/form/">Add post</a></li>
-                  <li><a class="silent" href="../posts/">Edit posts</a></li>
-                </ol>
+                <a class="silent" href="../posts/">Posts</a>
               </li>
               <li class="menu-list-item">
-                Projects
-                <ol class="dropdown">
-                  <li>
-                    <a class="silent" href="../projects/form">Add project</a>
-                  </li>
-                  <li>
-                    <a class="silent" href="../projects/">Edit project</a>
-                  </li>
-                </ol>
+                <a class="silent" href="../projects/">Projects</a>
               </li>
               <li class="menu-list-item">
                 <a href="./" class="silent"> Personal info</a>
@@ -77,15 +65,15 @@
             <a href="./" class="silent">personal</a>
           </div>
           <div>
-            <h1>Edit personal information</h1>
+            <h1 id="form-title">Edit personal information</h1>
             <div class="form-container">
-              <form action="../">
+              <form id="personalInfoForm">
                 <div class="form-group">
                   <label>Choose profile image</label>
                   <input
                     class="control"
                     type="file"
-                    name="name"
+                    name="image"
                     placeholder="Choose an image"
                   />
                 </div>
@@ -93,7 +81,7 @@
                   <input
                     class="control"
                     type="text"
-                    name="name"
+                    name="keywords"
                     placeholder="Keywords: problem solver ..."
                   />
                 </div>
@@ -102,7 +90,7 @@
                   <input
                     class="control"
                     type="text"
-                    name="name"
+                    name="info"
                     placeholder="Small info"
                   />
                 </div>
@@ -110,12 +98,13 @@
                   <input
                     class="control"
                     type="password"
-                    name="subject"
+                    name="summary"
                     placeholder="Write a little summary"
                   />
                 </div>
                 <div class="form-group">
                   <textarea
+                    name="about"
                     class="control"
                     cols="30"
                     rows="10"
@@ -133,5 +122,7 @@
       </div>
     </main>
     <script src="../../../assets/javascript/main.js"></script>
+    <script src="../../../assets/javascript/validator.js"></script>
+    <script src="../../../assets/javascript/admin/personalInformation.js"></script>
   </body>
 </html>
