--- a/UI/pages/admin/projects/form/index.html
+++ b/UI/pages/admin/projects/form/index.html
@@ -44,24 +44,11 @@
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
-                Posts
-                <ol class="dropdown">
-                  <li>
-                    <a class="silent" href="../../posts/form/">Add post</a>
-                  </li>
-                  <li><a class="silent" href="../../posts/">Edit posts</a></li>
-                </ol>
+                <a class="silent" href="../../posts/">Posts</a>
               </li>
+
               <li class="menu-list-item">
-                Projects
-                <ol class="dropdown">
-                  <li>
-                    <a class="silent" href="./">Add project</a>
-                  </li>
-                  <li>
-                    <a class="silent" href="../">Edit project</a>
-                  </li>
-                </ol>
+                <a class="silent" href="../">Project</a>
               </li>
               <li class="menu-list-item">
                 <a href="../../personal/" class="silent"> Personal info</a>
@@ -80,14 +67,14 @@
             <a href="./" class="silent">form</a>
           </div>
           <div>
-            <h1>Add project</h1>
+            <h1 id="pageTitle">Add project</h1>
             <div class="form-container">
-              <form>
+              <form id="projectForm">
                 <div class="form-group">
                   <input
                     class="control"
                     type="text"
-                    name="name"
+                    name="title"
                     placeholder="Title of project"
                   />
                 </div>
@@ -96,7 +83,7 @@
                   <input
                     class="control"
                     type="file"
-                    name="name"
+                    name="image"
                     placeholder="Choose an image"
                   />
                 </div>
@@ -104,15 +91,23 @@
                   <input
                     class="control"
                     type="text"
-                    name="name"
+                    name="link"
+                    placeholder="Link to live project"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    class="control"
+                    type="text"
+                    name="tags"
                     placeholder="Tags, separated by commas"
                   />
                 </div>
                 <div class="form-group">
                   <textarea
                     class="control"
-                    type="password"
-                    name="subject"
+                    type="text"
+                    name="summary"
                     placeholder="Write a little summary"
                   ></textarea>
                 </div>
@@ -121,7 +116,7 @@
                   <input type="checkbox" />
                   Checking box will make the project will be featured
                 </div>
-                <button class="button text-center width-full">
+                <button class="button text-center width-full" id="submitBtn">
                   Add project
                 </button>
               </form>
@@ -131,5 +126,7 @@
       </div>
     </main>
     <script src="../../../../assets/javascript/main.js"></script>
+    <script src="../../../../assets/javascript/validator.js"></script>
+    <script src="../../../../assets/javascript/admin/projects.js"></script>
   </body>
 </html>
