fix: Worked on the feedback

--- a/UI/pages/login/index.html
+++ b/UI/pages/login/index.html
@@ -49,12 +49,12 @@
           </div>
           <div class="flex login-wrapper">
             <div class="form-container">
-              <form action="../admin/index.html">
+              <form id="loginForm">
                 <div class="form-group">
                   <input
                     class="control"
                     type="text"
-                    name="name"
+                    name="username"
                     placeholder="username"
                   />
                 </div>
@@ -62,7 +62,7 @@
                   <input
                     class="control"
                     type="password"
-                    name="subject"
+                    name="password"
                     placeholder="password"
                   />
                 </div>
@@ -94,5 +94,7 @@
     </footer>
 
     <script src="../../assets/javascript/main.js"></script>
+    <script src="../../assets/javascript/Validator.js"></script>
+    <script src="../../assets/javascript/login.js"></script>
   </body>
 </html>
