ft: terminal first pulgins

--- a/UI/pages/about/index.html
+++ b/UI/pages/about/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../../favicon.svg" />
+    <link
+      rel="preload"
+      href="../../assets/javascript/preloadingball.js"
+      as="script"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../assets/styles/main.css" />
     <link rel="stylesheet" href="../../assets/styles/about.css" />
@@ -123,6 +128,7 @@
         <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
       </footer>
     </main>
+    <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
   </body>
 </html>
