--- a/UI/pages/admin/projects/form/index.html
+++ b/UI/pages/admin/projects/form/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../../favicon.svg" />
+    <link
+      rel="preload"
+      href="../../../../assets/javascript/preloadingball.js"
+      as="script"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../../../assets/styles/main.css" />
     <link rel="stylesheet" href="../../../../assets/styles/admin/main.css" />
@@ -125,6 +130,7 @@
         </section>
       </div>
     </main>
+    <script src="../../../../assets/javascript/preloadingball.js"></script>
     <script src="../../../../assets/javascript/main.js"></script>
     <script src="../../../../assets/javascript/validator.js"></script>
     <script src="../../../../assets/javascript/admin/projects.js"></script>
