--- a/UI/pages/contactme/index.html
+++ b/UI/pages/contactme/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../../favicon.svg" />
+    <link
+      rel="preload"
+      href="../../assets/javascript/preloadingball.js"
+      as="script"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../assets/styles/main.css" />
     <link rel="stylesheet" href="../../assets/styles/contact.css" />
@@ -111,7 +117,7 @@
       </ul>
       <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
     </footer>
-
+    <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
     <script src="../../assets/javascript/validator.js"></script>
     <script src="../../assets/javascript/contactme.js"></script>
