--- a/UI/pages/work/index.html
+++ b/UI/pages/work/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../assets/styles/main.css" />
     <link
+      rel="preload"
+      href="../../assets/javascript/preloadingball.js"
+      as="script"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -195,6 +200,7 @@
         <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
       </footer>
     </main>
+    <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
   </body>
 </html>
