Added the integration for contact me

--- a/UI/pages/admin/enquires/index.html
+++ b/UI/pages/admin/enquires/index.html
@@ -122,5 +122,7 @@
     </main>
     <script src="../../../assets/javascript/preloadingball.js"></script>
     <script src="../../../assets/javascript/main.js"></script>
+    <script src="../../../assets/javascript/personalEnquires.js"></script>
   </body>
 </html>
+
