--- a/UI/pages/admin/index.html
+++ b/UI/pages/admin/index.html
@@ -29,8 +29,8 @@
           </div>
           <ul class="flex height-0" id="navigation">
           </ul>
-          <button class="button-primary">
-            <a href="/pages/login">Logout</a>
+          <button class="button-primary" id="logoutBtn">
+            Logout
           </button>
         </div>
       </nav>
@@ -140,5 +140,7 @@
     </main>
     <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
+    <script src="../../assets/javascript/admin.js"></script>
+
   </body>
 </html>
