--- a/UI/pages/admin/projects/index.html
+++ b/UI/pages/admin/projects/index.html
@@ -212,5 +212,7 @@
     </main>
     <script src="../../../assets/javascript/preloadingball.js"></script>
     <script src="../../../assets/javascript/main.js"></script>
+    <script src="../../../assets/javascript/admin.js"></script>
   </body>
 </html>
+
