--- a/UI/pages/login/index.html
+++ b/UI/pages/login/index.html
@@ -60,8 +60,8 @@
                   <input
                     class="control"
                     type="text"
-                    name="username"
-                    placeholder="username"
+                    name="email"
+                    placeholder="email"
                   />
                 </div>
                 <div class="form-group">
@@ -72,7 +72,13 @@
                     placeholder="password"
                   />
                 </div>
-                <button class="button text-center width-full">Login</button>
+                <button
+                  class="button text-center width-full"
+                  id="submit"
+                  disabled
+                >
+                  Signin
+                </button>
               </form>
             </div>
 
