--- a/UI/index.html
+++ b/UI/index.html
@@ -38,7 +38,7 @@
             <li><a href="pages/contactme/">Contact</a></li>
             <li>
               <button class="button-primary">
-                <a href="pages/login/">Login</a>
+                <a href="pages/login/" id="loginBtn">Login</a>
               </button>
             </li>
           </ul>
