--- a/UI/pages/about/index.html
+++ b/UI/pages/about/index.html
@@ -35,7 +35,7 @@
             <li><a href="../contactme/">Contact</a></li>
             <li>
               <button class="button-primary">
-                <a href="../login/">Login</a>
+                <a href="../login/" id="loginBtn">Login</a>
               </button>
             </li>
           </ul>
@@ -132,3 +132,4 @@
     <script src="../../assets/javascript/main.js"></script>
   </body>
 </html>
+
