--- a/UI/pages/admin/enquires/index.html
+++ b/UI/pages/admin/enquires/index.html
@@ -27,9 +27,7 @@
           <div id="logo">
             <h1><a href="/">Sostene</a></h1>
           </div>
-          <button class="button-primary">
-            <a href="/pages/login">Logout</a>
-          </button>
+          <button class="button-primary" id="logoutBtn">Logout</button>
         </div>
       </nav>
     </header>
@@ -41,8 +39,7 @@
               <i class="fa-solid fa-bars"></i>
             </div>
             <div class="info">
-              Continue,
-              <h3 class="color-primary">Sostene</h3>
+              <h3 class="color-primary" id="user-name"></h3>
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
@@ -73,49 +70,8 @@
                 <button class="button">Search</button>
               </form>
             </div>
-            <h1>Messages and enquiries</h1>
-            <div class="comment-group">
-              <div class="flex comment" level="1">
-                <div class="flex comment-wrapper">
-                  <div class="flex comment-body" level="1">
-                    <div class="flex comment-body-header">
-                      <div class="user flex">
-                        <h5 class="name">pacsimon</h5>
-                        <small>1 week ago</small>
-                      </div>
-                      <button class="silent button">reply</button>
-                    </div>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Possimus fugiat libero at quo vero provident aperiam
-                      cumque, eaque voluptatem consequatur! Culpa iste doloribus
-                      excepturi. Voluptatibus minus ratione deserunt eos
-                      doloribus?
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="flex comment" level="2">
-                <div class="flex comment-wrapper">
-                  <div class="flex comment-body" level="1">
-                    <div class="flex comment-body-header">
-                      <div class="user flex">
-                        <h5 class="name">pacsimon</h5>
-                        <small class="date">1 week ago</small>
-                      </div>
-                      <button class="silent button">reply</button>
-                    </div>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Possimus fugiat libero at quo vero provident aperiam
-                      cumque, eaque voluptatem consequatur! Culpa iste doloribus
-                      excepturi. Voluptatibus minus ratione deserunt eos
-                      doloribus?
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <h1>Messages</h1>
+            <div class="comment-group" id="message-container"></div>
           </div>
         </section>
       </div>
@@ -123,7 +79,7 @@
     <script src="../../../assets/javascript/preloadingball.js"></script>
     <script src="../../../assets/javascript/main.js"></script>
     <script src="../../../assets/javascript/admin.js"></script>
-    <script src="../../../assets/javascript/personalEnquires.js"></script>
+    <script src="../../../assets/javascript/admin/messages.js"></script>
   </body>
 </html>
 
