--- a/UI/pages/admin/personal/index.html
+++ b/UI/pages/admin/personal/index.html
@@ -30,9 +30,7 @@
           <ul class="flex height-0" id="navigation">
             <li></li>
           </ul>
-          <button class="button-primary">
-            <a href="/pages/login">Logout</a>
-          </button>
+          <button class="button-primary" id="logoutBtn">Logout</button>
         </div>
       </nav>
     </header>
@@ -44,8 +42,7 @@
               <i class="fa-solid fa-bars"></i>
             </div>
             <div class="info">
-              Continue,
-              <h3 class="color-primary">Sostene</h3>
+              <h3 class="color-primary" id="user-name"></h3>
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
