--- a/UI/pages/contactme/index.html
+++ b/UI/pages/contactme/index.html
@@ -37,7 +37,7 @@
             <li><a href="../contactme/">Contact</a></li>
             <li>
               <button class="button-primary">
-                <a href="../login/">Login</a>
+                <a href="../login/" id="loginBtn">Login</a>
               </button>
             </li>
           </ul>
