--- a/UI/pages/admin/projects/index.html
+++ b/UI/pages/admin/projects/index.html
@@ -30,9 +30,7 @@
           <ul class="flex height-0" id="navigation">
             <li></li>
           </ul>
-          <button class="button-primary">
-            <a href="/pages/login">Logout</a>
-          </button>
+          <button class="button-primary" id="logoutBtn">Logout</button>
         </div>
       </nav>
     </header>
@@ -44,8 +42,7 @@
               <i class="fa-solid fa-bars"></i>
             </div>
             <div class="info">
-              Continue,
-              <h3 class="color-primary">Sostene</h3>
+              <h3 class="color-primary" id="user-name"></h3>
             </div>
             <ul id="sidebar-menu">
               <li class="menu-list-item">
@@ -77,134 +74,18 @@
                   <a class="silent" href="./form">Add project</a>
                 </button>
               </div>
-              <form class="flex width-full">
+              <!-- This the search box-->
+              <!-- <form class="flex width-full">
                 <input type="text" class="control mr-1" />
                 <button class="button">Search</button>
-              </form>
+              </form> -->
             </div>
 
-            <div class="flex flex-row horizontal-scroll flex-wrap">
-              <div class="card">
-                <div class="card-image">
-                  <img
-                    src="../../../assets/images/huddle-single.png"
-                    alt="Typing speed"
-                  />
-                </div>
-                <div class="text-container">
-                  <h4>Huddle</h4>
-                  <p>
-                    A landing page for SaaS app made using javascript, html and
-                    css.
-                  </p>
-                  <div class="tags">
-                    <span>CSS</span><span>Javascript</span><span>HTML</span>
-                  </div>
-                  <div class="button-group flex">
-                    <button class="button-primary-inverse">
-                      <a href="./form/?id=1">Edit</a>
-                    </button>
-                    <button class="button-danger">Delete</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-image">
-                  <img
-                    src="../../../assets/images/foylo.png"
-                    alt="Typing speed"
-                  />
-                </div>
-                <div class="text-container">
-                  <h4>Fylo Basic</h4>
-                  <p>
-                    A landing page for SaaS app made using javascript, html and
-                    css.
-                  </p>
-                  <div class="tags">
-                    <span>Vue</span><span>javascript</span><span>CSS</span
-                    ><span> HTML</span>
-                  </div>
-                  <div class="button-group flex">
-                    <button class="button-primary-inverse">
-                      <a href="./form/?id=1">Edit</a>
-                    </button>
-                    <button class="button-danger">Delete</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-image">
-                  <img
-                    src="../../../assets/images/huddle-basic.png"
-                    alt="Typing speed"
-                  />
-                </div>
-                <div class="text-container">
-                  <h4>Huddle Basic</h4>
-                  <p>
-                    A landing page for SaaS app made using javascript, html and
-                    css.
-                  </p>
-                  <div class="tags">
-                    <span>Vue</span><span>javascript</span><span>CSS</span
-                    ><span> HTML</span>
-                  </div>
-                  <div class="button-group flex">
-                    <button class="button-primary-inverse">
-                      <a href="./form/?id=1">Edit</a>
-                    </button>
-                    <button class="button-danger">Delete</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-image">
-                  <img
-                    src="../../../assets/images/random-quote.png"
-                    alt="Typing speed"
-                  />
-                </div>
-                <div class="text-container">
-                  <h4>Random quote</h4>
-                  <p>
-                    A landing page for SaaS app made using javascript, html and
-                    css.
-                  </p>
-                  <div class="tags">
-                    <span>React</span><span>javascript</span><span>CSS</span
-                    ><span> HTML</span>
-                  </div>
-                  <div class="button-group flex">
-                    <button class="button-primary-inverse">
-                      <a href="./form/?id=1">Edit</a>
-                    </button>
-                    <button class="button-danger">Delete</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-image">
-                  <img
-                    src="../../../assets/images/scissors-game.png"
-                    alt="Typing speed"
-                  />
-                </div>
-                <div class="text-container">
-                  <h4>Scissors game</h4>
-                  <p>Simple game with its rules. Just visit it and play</p>
-                  <div class="tags">
-                    <span>React</span><span>javascript</span><span>CSS</span
-                    ><span> HTML</span>
-                  </div>
-                  <div class="button-group flex">
-                    <button class="button-primary-inverse">
-                      <a href="./form/?id=1">Edit</a>
-                    </button>
-                    <button class="button-danger">Delete</button>
-                  </div>
-                </div>
-              </div>
+            <div
+              class="flex flex-row horizontal-scroll flex-wrap"
+              id="projects"
+            >
+              We have no projects
             </div>
           </div>
         </section>
@@ -213,6 +94,7 @@
     <script src="../../../assets/javascript/preloadingball.js"></script>
     <script src="../../../assets/javascript/main.js"></script>
     <script src="../../../assets/javascript/admin.js"></script>
+    <script src="../../../assets/javascript/admin/projects.js"></script>
   </body>
 </html>
 
