--- a/UI/pages/verify/index.html
+++ b/UI/pages/verify/index.html
@@ -48,49 +48,7 @@
       </nav>
     </header>
     <main>
-      <section id="login" class="flex margin-nav">
-        <div class="wrapper">
-          <div class="heading text-center py-1">
-            <h2>Login</h2>
-          </div>
-          <div class="flex login-wrapper">
-            <div class="form-container">
-              <form id="loginForm">
-                <div class="form-group">
-                  <input
-                    class="control"
-                    type="text"
-                    name="email"
-                    placeholder="email"
-                  />
-                </div>
-                <div class="form-group">
-                  <input
-                    class="control"
-                    type="password"
-                    name="password"
-                    placeholder="password"
-                  />
-                </div>
-                <button class="button text-center width-full" id="submit">
-                  Signin
-                </button>
-              </form>
-            </div>
-
-            <div class="info text-center">
-              <div>
-                <img
-                  class="contact-img"
-                  src="../../assets/images/aboutme.svg"
-                  alt=""
-                />
-              </div>
-              <p>Login to access some of your treasures</p>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section id="verify" class="flex margin-nav"></section>
     </main>
     <footer>
       <ul class="social-media-links">
@@ -103,7 +61,7 @@
     <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
     <script src="../../assets/javascript/validator.js"></script>
-    <script src="../../assets/javascript/login.js"></script>
+    <script src="../../assets/javascript/verify.js"></script>
   </body>
 </html>
 
