--- a/UI/pages/work/index.html
+++ b/UI/pages/work/index.html
@@ -34,7 +34,7 @@
             <li><a href="../contactme/">Contact</a></li>
             <li>
               <button class="button-primary">
-                <a href="../login/">Login</a>
+                <a href="../login/" id="loginBtn">Login</a>
               </button>
             </li>
           </ul>
@@ -61,13 +61,13 @@
           </p>
         </div>
       </section>
-      <section id="projects">
+      <section>
         <div class="wrapper">
           <div class="heading text-center">
             <h2 class="mb-1 text-primary">Projects</h2>
             <p>Here are some of work which are am proud</p>
           </div>
-          <div class="flex flex-row horizontal-scroll flex-wrap">
+          <div class="flex flex-row horizontal-scroll flex-wrap" id="projects">
             <div class="card">
               <div class="card-image">
                 <img
@@ -202,5 +202,7 @@
     </main>
     <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
+    <script src="../../assets/javascript/work.js"></script>
   </body>
 </html>
+
