--- a/UI/index.html
+++ b/UI/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
       </section>
-      <section id="ftproject">
+      <!-- <section id="ftproject">
         <div class="wrapper">
           <div class="heading text-center">
             <h2 class="mb-1">Featured work</h2>
@@ -216,8 +216,8 @@
             </button>
           </div>
         </div>
-      </section>
-      <section id="ftpost">
+      </section> -->
+      <!-- <section id="ftpost">
         <div class="wrapper">
           <div class="heading text-center">
             <h2 class="mb-1">Featured posts</h2>
@@ -318,7 +318,7 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
       <footer>
         <ul class="social-media-links">
           <li><a href="https://www.linkedin.com">Linkedin</a></li>
