--- a/UI/index.html
+++ b/UI/index.html
@@ -52,8 +52,8 @@
       <section id="hero" class="flex">
         <div class="wrapper flex">
           <div class="flex-1 margin-nav">
-            <h1 class="text-5">Learner, critical thinker</h1>
-            <p>Every code is written for reason</p>
+            <h1 class="text-5" id="keywords">Learner, critical thinker</h1>
+            <p id="owner-info">Every code is written for reason</p>
             <div>
               <button class="button-primary">Hire me</button>
             </div>
@@ -61,7 +61,6 @@
           <div class="flex-1 flex-row margin-nav">
             <div class="width-full">
               <div  id="terminal">
-                
                 </div>
               </div>
             </div>
@@ -72,15 +71,14 @@
         <div class="wrapper headline flex">
           <div class="headline-picture-container" class="">
             <img
-              src="assets/images/sostene.jpg"
-              alt="Sostene picture"
-              class="width-full"
+              class="px-2 width-full "
+              id="owner-image"
             />
           </div>
 
-          <div class="flex-1 headline-text-container">
+          <div class="flex-1 headline-text-container" id="owner-">
             <h2>About me</h2>
-            <p>
+            <p id="owner-summary">
               BE student, Freecodecamp certified, 3 years of learning in
               Software Development, understanding of HTML, CSS3, JSON, React,
               Vue, Database, and SQL queries and Capable of Performance Testing,
@@ -331,5 +329,6 @@
     <script src="assets/javascript/preloadingball.js"></script>
     <script src="assets/javascript/main.js"></script>
     <script src="assets/javascript/terminal.js"></script>
+    <script src="assets/javascript/home.js"></script>
   </body>
 </html>
