--- a/UI/pages/about/index.html
+++ b/UI/pages/about/index.html
@@ -50,7 +50,7 @@
         <div class="wrapper headline flex">
           <div class="flex-1 headline-text-container">
             <h2>About me</h2>
-            <p>
+            <p id="owner-summary">
               BE student, Freecodecamp certified, 3 years of learning in
               Software Development, understanding of HTML, CSS3, JSON, React,
               Vue, Database, and SQL queries and Capable of Performance Testing,
@@ -63,7 +63,7 @@
           <div class="headline-picture-container reverse">
             <img
               src="../../assets/images/sostene.jpg"
-              alt="Sostene picture"
+              id="owner-image"
               class="width-full"
             />
           </div>
@@ -75,35 +75,7 @@
             <h2>More about me</h2>
           </div>
           <div class="flex" id="about-info">
-            <div class="about-me width-full text-left">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                tempore earum odio assumenda dolores officia voluptates
-                perspiciatis necessitatibus architecto nesciunt, perferendis
-                distinctio, illo obcaecati commodi at quasi ex totam rerum!Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Quam tempore
-                earum odio assumenda dolores officia voluptates perspiciatis
-                necessitatibus architecto nesciunt, perferendis distinctio, illo
-                obcaecati commodi at quasi ex totam rerum!Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quam tempore earum odio
-                assumenda dolores officia voluptates perspiciatis necessitatibus
-                architecto nesciunt, perferendis distinctio, illo obcaecati
-                commodi at quasi ex totam rerum!
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-                tempore earum odio assumenda dolores officia voluptates
-                perspiciatis necessitatibus architecto nesciunt, perferendis
-                distinctio, illo obcaecati commodi at quasi ex totam rerum!Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Quam tempore
-                earum odio assumenda dolores officia voluptates perspiciatis
-                necessitatibus architecto nesciunt, illo obcaecati commodi at
-                quasi ex totam rerum!Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Quam tempore earum odio assumenda dolores
-                officia voluptates perspiciatis necessitatibus architecto
-                nesciunt, perferendis distinctio, illo obcaecati commodi at
-                quasi ex totam rerum!
-              </p>
+            <div class="about-me width-full text-left" id="about-owner">
               <div class="">
                 <button class="button px-3">Hire me</button>
               </div>
@@ -130,6 +102,7 @@
     </main>
     <script src="../../assets/javascript/preloadingball.js"></script>
     <script src="../../assets/javascript/main.js"></script>
+    <script src="../../assets/javascript/home.js"></script>
   </body>
 </html>
 
