--- a/UI/index.html
+++ b/UI/index.html
@@ -52,8 +52,8 @@
       <section id="hero" class="flex">
         <div class="wrapper flex">
           <div class="flex-1 margin-nav">
-            <h1 class="text-5" id="keywords">Learner, critical thinker</h1>
-            <p id="owner-info">Every code is written for reason</p>
+            <h1 class="text-5" id="keywords">...</h1>
+            <p id="owner-info">...</p>
             <div>
               <button class="button-primary">Hire me</button>
             </div>
@@ -79,10 +79,7 @@
           <div class="flex-1 headline-text-container" id="owner-">
             <h2>About me</h2>
             <p id="owner-summary">
-              BE student, Freecodecamp certified, 3 years of learning in
-              Software Development, understanding of HTML, CSS3, JSON, React,
-              Vue, Database, and SQL queries and Capable of Performance Testing,
-              Security testing, Documentation, and Deployment on live site.
+...
             </p>
             <div>
               <button class="button-primary">
