--- a/UI/pages/admin/projects/form/index.html
+++ b/UI/pages/admin/projects/form/index.html
@@ -102,6 +102,14 @@
                   <input
                     class="control"
                     type="text"
+                    name="githubLink"
+                    placeholder="Link to Source code"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    class="control"
+                    type="text"
                     name="categories"
                     placeholder="Tags, separated by commas"
                   />
