--- a/UI/html-version/index.html
+++ b/UI/html-version/index.html
@@ -52,8 +52,8 @@
       <section id="hero" class="flex">
         <div class="wrapper flex">
           <div class="flex-1 margin-nav">
-            <h1 class="text-5" id="keywords">...</h1>
-            <p id="owner-info">...</p>
+            <h1 class="text-5" id="keywords">Loading...</h1>
+            <p id="owner-info">Loading...</p>
             <div>
               <button class="button-primary">Hire me</button>
             </div>
@@ -79,7 +79,7 @@
           <div class="flex-1 headline-text-container" id="owner-">
             <h2>About me</h2>
             <p id="owner-summary">
-...
+Loading...
             </p>
             <div>
               <button class="button-primary">
@@ -316,7 +316,7 @@
       </section> -->
       <footer>
         <ul class="social-media-links">
-          <li><a href="https://www.linkedin.com/in/sostene-munezero-bagira-755256197/">Linkedin</a></li>
+          <li><a href="https://www.linkedin.com/in/sostene/">Linkedin</a></li>
           <li><a href="https://github.com/munezerobagira/my-brand-sostene">Github</a></li>
         </ul>
         <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
