--- a/UI/html-version/pages/about/index.html
+++ b/UI/html-version/pages/about/index.html
@@ -50,14 +50,9 @@
         <div class="wrapper headline flex">
           <div class="flex-1 headline-text-container">
             <h2>About me</h2>
-            <p id="owner-summary">
-              BE student, Freecodecamp certified, 3 years of learning in
-              Software Development, understanding of HTML, CSS3, JSON, React,
-              Vue, Database, and SQL queries and Capable of Performance Testing,
-              Security testing, Documentation, and Deployment on live site.
-            </p>
+            <p id="owner-summary">Loading....</p>
             <div>
-              <button class="button-primary">Check resume</button>
+              <a href="https://mbags.notion.site/Sostene-Munezero-Bagira-s-Resume-8d3c21c1c21344b2a8fdce81a14e8975" class="button-primary">Check resume</button>
             </div>
           </div>
           <div class="headline-picture-container reverse">
@@ -77,7 +72,7 @@
           <div class="flex" id="about-info">
             <div class="about-me width-full text-left" id="about-owner">
               <div class="">
-                <button class="button px-3">Hire me</button>
+                <a href="contactme" class="button px-3">Hire me</button>
               </div>
             </div>
             <div class="illustration right">
@@ -95,17 +90,19 @@
         <ul class="social-media-links">
           <li>
             <a
-              href="https://www.linkedin.com/in/sostene-munezero-bagira-755256197/"
+              href="https://www.linkedin.com/in/sostene"
               >Linkedin</a
             >
           </li>
-          <li>
-            <a href="https://github.com/munezerobagira/my-brand-sostene"
+          <li>Give me a Star ⭐  on github
+            <a href="https://github.com/munezerobagira/protofolio-website"
               >Github</a
             >
           </li>
         </ul>
-        <h5 class="text-center">Copyright &copy; Munezero Bagira Sostene</h5>
+        <h5 class="text-center">
+          2021-<script> document.write(new Date().getFullYear())</script>
+          Copyright &copy; Munezero Bagira Sostene</h5>
       </footer>
     </main>
     <script src="../../assets/javascript/preloadingball.js"></script>
